tests/ui/g-typelist-local-payload-mismatch.stderr
error[E0271]: type mismatch resolving `<StepCons<LocalSend<Role<1>, Message<LabelMarker<7>, u16>>, StepNil> as StepConcat<StepNil>>::Output == StepCons<LocalSend<Role<1>, Message<LabelMarker<7>, u8>>, StepNil>`
  --> tests/ui/g-typelist-local-payload-mismatch.rs:14:5
   |
14 | > = project(&PROGRAM);
   |     ^^^^^^^^^^^^^^^^^ expected `u8`, found `u16`
   |
   = note: expected struct `StepCons<LocalSend<Role<1>, hibana::global::Message<hibana::global::LabelMarker<7>, u8>>, StepNil>`
              found struct `StepCons<LocalSend<Role<1>, hibana::global::Message<hibana::global::LabelMarker<7>, u16>>, StepNil>`
